--- a/springboot-apirest/src/main/resources/application.properties
+++ b/springboot-apirest/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost/bd_api_spring?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= 7789
+spring.datasource.password= root
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform= org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto= create-drop
